Projet_GL/src/test/deca/context/valid/unprovided/testObjet/initialization.deca
// Description:
//   Différentes initialisations
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {
}
class B extends A{
}

{
	A a1 = new A();
	A a2 = new B(); //Intervention du cast
	
}
	