Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/differentReturnType.deca
// Description:
//
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A{
      void get(){
      	   return null;
      }
}